// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoCallQoe Details Page render the page properly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      class="styledComponents__Wrapper-sc-xov27h-0 gRMUNV"
    >
      <div
        class="ant-page-header ant-page-header-ghost"
      >
        <div
          class="ant-page-header-heading"
        >
          <div
            class="ant-page-header-heading-left"
          >
            <span
              class="ant-page-header-heading-title"
            >
              <h1
                aria-label="Test 1"
                class="ant-typography ant-typography-ellipsis ant-typography-single-line"
              >
                Test 1
                <span
                  aria-hidden="true"
                  style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
                >
                  lg
                </span>
                <span
                  aria-hidden="true"
                  style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                >
                  <span
                    aria-hidden="true"
                  >
                    ...
                  </span>
                </span>
              </h1>
            </span>
          </div>
          <span
            class="ant-page-header-heading-extra"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                Video Call QOE
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="styledComponents__Pill-sc-j61ge1-0 NKxEo styledComponents__BigTrendPill-cc9slb-0 dSVxJE"
                  type="positive"
                >
                  Good
                </span>
              </div>
            </div>
          </span>
        </div>
        <div
          class="ant-page-header-content"
        >
          <span
            aria-label="Start Time: 04/18/2023 10:21:13 | End Time: 04/18/2023 10:29:01 | Duration: 7 m 48 s"
            class="ant-typography ant-typography-ellipsis ant-typography-single-line"
          >
            Start Time: 04/18/2023 10:21:13 | End Time: 04/18/2023 10:29:01 | Duration: 7 m 48 s
            <span
              aria-hidden="true"
              style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
            >
              lg
            </span>
            <span
              aria-hidden="true"
              style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
            >
              <span
                aria-hidden="true"
              >
                ...
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <span
      class="ant-typography"
      style="font-size: 16px; font-weight: 700; font-family: 'Montserrat', sans-serif; line-height: 20px;"
    >
      Participant Details
    </span>
    <div
      class="styledComponents__Wrapper-sc-1abm7iv-12 fiibDB"
    >
      <div
        class="ant-pro-table"
      >
        <div
          class="ant-pro-card"
        >
          <div
            class="ant-pro-card-body"
            style="padding-top: 0px;"
          >
            <div
              class="ant-pro-table-list-toolbar"
            />
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                        style="overflow-x: auto; overflow-y: hidden;"
                      >
                        <table
                          style="min-width: 100%; table-layout: auto;"
                        >
                          <colgroup>
                            <col />
                            <col
                              style="width: 200px;"
                            />
                            <col />
                            <col />
                            <col />
                            <col />
                            <col />
                            <col />
                            <col
                              style="width: 50px;"
                            />
                            <col
                              style="width: 50px;"
                            />
                            <col
                              style="width: 150px;"
                            />
                            <col
                              style="width: 32px;"
                            />
                          </colgroup>
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              >
                                Client MAC
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                Participant
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                IP Address
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                Network Type
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                AP
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                AP MAC
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                SSID
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                Radio
                              </th>
                              <th
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                Join Time
                              </th>
                              <th
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                Leave Time
                              </th>
                              <th
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                Wi-Fi Connection Quality
                              </th>
                              <th
                                class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                style="position: sticky; right: 0px;"
                              />
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              aria-hidden="true"
                              class="ant-table-measure-row"
                              style="height: 0px; font-size: 0px;"
                            >
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                            >
                              <td
                                class="ant-table-cell"
                              />
                              <td
                                class="ant-table-cell"
                              >
                                Participant 1
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                106.216.236.123
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                Cellular
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/devices/wifi"
                                />
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/devices/wifi"
                                />
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/networks/wireless"
                                />
                              </td>
                              <td
                                class="ant-table-cell"
                              />
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                10:21
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                10:28
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              />
                              <td
                                class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                style="position: sticky; right: 0px;"
                              />
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                F0:81:73:20:84:39
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                Participant 2 (Mac M1)
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                49.207.200.111
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                Wifi
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/devices/wifi"
                                >
                                  AP-Group-Issue
                                </a>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/devices/wifi"
                                >
                                  F0:3E:90:36:D3:00
                                </a>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/networks/wireless"
                                >
                                  CIOT
                                </a>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                2.4 Ghz
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                10:22
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                10:29
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <span
                                  class="styledComponents__Pill-sc-j61ge1-0 NKxEo"
                                  type="positive"
                                >
                                  Good
                                </span>
                              </td>
                              <td
                                class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                style="position: sticky; right: 0px;"
                              />
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VideoCallQoe Details Page render the page properly having bad/average quality 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      class="styledComponents__Wrapper-sc-xov27h-0 gRMUNV"
    >
      <div
        class="ant-page-header ant-page-header-ghost"
      >
        <div
          class="ant-page-header-heading"
        >
          <div
            class="ant-page-header-heading-left"
          >
            <span
              class="ant-page-header-heading-title"
            >
              <h1
                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
              >
                Test 2
              </h1>
            </span>
          </div>
          <span
            class="ant-page-header-heading-extra"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                Video Call QOE
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="styledComponents__Pill-sc-j61ge1-0 chVxOo styledComponents__BigTrendPill-cc9slb-0 dSVxJE"
                  type="negative"
                >
                  Bad
                </span>
              </div>
            </div>
          </span>
        </div>
        <div
          class="ant-page-header-content"
        >
          <span
            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
          >
            Start Time: 04/11/2023 04:40:20 | End Time: 04/11/2023 04:44:06 | Duration: 3 m 46 s
          </span>
        </div>
      </div>
    </div>
    <span
      class="ant-typography"
      style="font-size: 16px; font-weight: 700; font-family: 'Montserrat', sans-serif; line-height: 20px;"
    >
      Participant Details
    </span>
    <div
      class="styledComponents__Wrapper-sc-1abm7iv-12 fiibDB"
    >
      <div
        class="ant-pro-table"
      >
        <div
          class="ant-pro-card"
        >
          <div
            class="ant-pro-card-body"
            style="padding-top: 0px;"
          >
            <div
              class="ant-pro-table-list-toolbar"
            />
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                        style="overflow-x: auto; overflow-y: hidden;"
                      >
                        <table
                          style="min-width: 100%; table-layout: auto;"
                        >
                          <colgroup>
                            <col />
                            <col
                              style="width: 200px;"
                            />
                            <col />
                            <col />
                            <col />
                            <col />
                            <col />
                            <col />
                            <col
                              style="width: 50px;"
                            />
                            <col
                              style="width: 50px;"
                            />
                            <col
                              style="width: 150px;"
                            />
                            <col
                              style="width: 32px;"
                            />
                          </colgroup>
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell react-resizable"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                Client MAC
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell react-resizable"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                Participant
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell react-resizable"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                IP Address
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell react-resizable"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                Network Type
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell react-resizable"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                AP
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell react-resizable"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                AP MAC
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell react-resizable"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                SSID
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell react-resizable"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                Radio
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell react-resizable"
                                style="text-align: center;"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                Join Time
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell react-resizable"
                                style="text-align: center;"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                Leave Time
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell react-resizable"
                                style="text-align: center;"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                Wi-Fi Connection Quality
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first react-resizable"
                                style="position: sticky; right: 0px;"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              aria-hidden="true"
                              class="ant-table-measure-row"
                              style="height: 0px; font-size: 0px;"
                            >
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                A8:64:F1:1A:D0:33
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                Test
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                134.242.238.1
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                Wifi
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/devices/wifi"
                                >
                                  Switch_client
                                </a>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/devices/wifi"
                                >
                                  C8:08:73:08:10:50
                                </a>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/networks/wireless"
                                >
                                  Divya_unlimited
                                </a>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5 Ghz
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                04:40
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                04:44
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <span
                                  class="styledComponents__Pill-sc-j61ge1-0 chVxOo"
                                  type="negative"
                                >
                                  Bad
                                </span>
                              </td>
                              <td
                                class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                style="position: sticky; right: 0px;"
                              />
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                F0:B3:EC:2A:A8:05
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                User 2 (Mac M1)
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                134.242.238.1
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                Wifi
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/devices/wifi"
                                >
                                  r320-11-154
                                </a>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/devices/wifi"
                                >
                                  B4:79:C8:12:8C:50
                                </a>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/t/tenant-id/networks/wireless"
                                >
                                  CIOT
                                </a>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                5 Ghz
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                04:41
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                04:43
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <span
                                  class="styledComponents__Pill-sc-j61ge1-0 ddNaCp"
                                  type="none"
                                >
                                  Average
                                </span>
                              </td>
                              <td
                                class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                style="position: sticky; right: 0px;"
                              />
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
